Learning Contoller Scaffolding

--- a/MVCLearn/MVCLearn/appsettings.json
+++ b/MVCLearn/MVCLearn/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MoviesContext": "Server=(localdb)\\mssqllocaldb;Database=MoviesContext-e61be23b-b677-4196-a1e6-903a6b547232;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
